force-app/main/default/objects/Individual_Yacht__c/Individual_Yacht__c.object-meta.xml
<CustomObject>
    <label>Individual Yacht</label>
    <nameField>
        <label>Yacht Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Yachts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>