force-app/main/default/objects/Individual_Yacht__c/fields/Yacht_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Yacht_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Yacht External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>