force-app/main/default/objects/Individual_Yacht__c/fields/Yacht_Image__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Image__c</fullName>
    <formula>IMAGE(  Image_URL__c ,  Name )</formula>
    <label>Yacht Image</label>
    <type>Text</type>
</CustomField>