force-app/main/default/objects/Individual_Yacht__c/fields/Yacht_Type__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Yacht Type</label>
    <referenceTo>Yacht_Type__c</referenceTo>
    <relationshipLabel>Individual Yachts</relationshipLabel>
    <relationshipName>Individual_Yachts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>