force-app/main/default/objects/Individual_Yacht__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Yacht_Type__c</columns>
    <columns>Capacity__c</columns>
    <columns>length__c</columns>
    <columns>Active__c</columns>
    <columns>Yacht_Image__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>